--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "css-select": "^5.1.0",
+    "from": "^0.1.7",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.21.2",
+    "react-scripts": "^5.0.1",
+    "svgo": "^3.2.0",
+    "switch": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
